--- a/public/style.css
+++ b/public/style.css
@@ -52,14 +52,21 @@ strong {
     display: none;
 }
 
-.storie {
+.storie {    
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: 7px;
     font-size: 12px;
     font-weight: 400;
-    line-height: 19px;
+    line-height: 19px;     
+}
+.storie h1{
+    width: 66px; 
+    text-align: center;  
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow:ellipsis;
 }
 
 .back {
@@ -118,13 +125,6 @@ strong {
 .foto img {
     width: 100%;
 }
-.md.hydrated.dontLiked{
-    color: blue;   
- }
-
- .md.hydrated.clicado{
-   color: red;    
-} 
 
 .interacao {
     display: flex;
@@ -186,7 +186,6 @@ strong {
 /* modo desktop sem sidebar */
 @media (min-width: 614px) {
 
-
     .conteudo {
         display: flex;
         flex-direction: column;
@@ -239,8 +238,8 @@ strong {
         display: flex;
         justify-content: center;
         align-items: center;
-        font-size: 12px;
-        color: #979797;
+        text-align: center;
+        font-size: 12px;        
         margin: 0px auto;
     }
 
